	PR c/11420 	* config/i386/i386.c (ix86_check_movabs): New function. 	* config/i386/i386-protos.h (ix86_check_movabs): New prototype. 	* config/i386/i386.md (movabs[shqd]i_1_rex64): Kill broken alternative. 	(movabs[shqd]i_[12]_rex64): Add ix86_check_movabs check to conditions.

* gcc.dg/20030708-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69092 138bc75d-0d04-0410-961f-82ee72b054a4